--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,28 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Options
+# Options
           user: Thomo1318
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Australia/Sydney
+#Plugin_sponserships
           plugin_sponsorships: yes
           plugin_sponsorships_sections: amount, sponsorships
           plugin_sponsorships_size: 24
+# Plugin_skyline
+          plugin_skyline: yes
+          plugin_skyline_frames: 60
+          plugin_skyline_quality: 0.5
+          plugin_skyline_settings: {
+  "url": "https://skyline.github.com/${login}/${year}",
+  "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+  "wait": 1,
+  "hide": "button, footer, a"
+}
+
+          plugin_skyline_year: 2025
+
 
 # # Visit https://github.com/lowlighter/metrics#-documentation for full reference
 # name: Metrics
