--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,17 +29,26 @@ jobs:
           plugin_sponsorships_size: 24
 # Plugin_skyline
           plugin_skyline: yes
-          plugin_skyline_frames: 60
-          plugin_skyline_quality: 0.5
-          plugin_skyline_settings: |
-            {
-              "url": "https://skyline.github.com/${login}/${year}",
-              "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
-              "wait": 1,
-              "hide": "button, footer, a"
-            }
+          plugin_skyline_year: 2020
+          plugin_skyline_frames: 6
+          plugin_skyline_quality: 1
 
-          plugin_skyline_year: 2025
+
+
+
+# # Plugin_skyline
+#           plugin_skyline: yes
+#           plugin_skyline_frames: 60
+#           plugin_skyline_quality: 0.5
+#           plugin_skyline_settings: |
+#             {
+#               "url": "https://skyline.github.com/${login}/${year}",
+#               "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+#               "wait": 1,
+#               "hide": "button, footer, a"
+#             }
+
+#           plugin_skyline_year: 2025
 
 
 # # Visit https://github.com/lowlighter/metrics#-documentation for full reference
